config-yml/wecube-auth-server.yml
# ------------------- ClusterIP Service -------------------
# 使用普通 ClusterIP，kube-proxy 做 8002→8080 的端口转发
# gateway.yml 中 AUTH_SERVER_ADDRESS=wecube-auth-server:8002 使用此 Service
apiVersion: v1
kind: Service
metadata:
  name: wecube-auth-server
  namespace: demo-myapp
spec:
  type: ClusterIP
  selector:
    app: wecube-auth-server
  ports:
  - name: http
    port: 8002
    targetPort: 8080

---
# ------------------- StatefulSet -------------------
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wecube-auth-server
  namespace: demo-myapp
spec:
  serviceName: wecube-auth-server
  replicas: 1
  selector:
    matchLabels:
      app: wecube-auth-server
  template:
    metadata:
      labels:
        app: wecube-auth-server
    spec:
      containers:
      - name: wecube-auth-server
        image: 192.168.150.6:30816/library/platform-auth-server:v4.5.7
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: auth-server-certs
          mountPath: /app/platform-auth-server/config/certs
      volumes:
      - name: localtime
        hostPath:
          path: /etc/localtime

  # PVC 模板（证书持久化）
  volumeClaimTemplates:
  - metadata:
      name: auth-server-certs
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "nfs"  # 你用的是 nfs，所以这里写 nfs
      resources:
        requests:
          storage: 1Gi
