config-yml/wecube-mysql.yml
apiVersion: v1
kind: Service
metadata:
  name: wecube-mysql
  namespace: demo-myapp
spec:
  clusterIP: None
  selector:
    app: wecube-mysql
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wecube-mysql
  namespace: demo-myapp
spec:
  serviceName: wecube-mysql
  replicas: 1
  selector:
    matchLabels:
      app: wecube-mysql
  template:
    metadata:
      labels:
        app: wecube-mysql
    spec:
      containers:
        - name: wecube-mysql
          image: 192.168.150.6:30816/library/wecube-db:v4.5.7
          args:
            - "--character-set-server=utf8mb4"
            - "--collation-server=utf8mb4_unicode_ci"
            - "--default-time-zone=+8:00"
            - "--max_allowed_packet=4M"
            - "--lower_case_table_names=1"
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: wecube-mysql-data
              mountPath: /var/lib/mysql
          resources:
            requests:
              cpu: "1"
              memory: "1Gi"
            limits:
              cpu: "2"
              memory: "2Gi"
  volumeClaimTemplates:
    - metadata:
        name: wecube-mysql-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 30Gi
        storageClassName: nfs
