config-yml/wecube-portal-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wecube-portal
  namespace: demo-myapp
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "1000m"
spec:
  ingressClassName: nginx
  rules:
  - host: wecube.portal.dev.local
    http:
      paths:
      - backend:
          service:
            name: wecube-portal
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
